# trifinger-rl-example

./: .gitignore  policy_profile.prof  setup.cfg  trifinger.toml  trifinger_base.toml
scripts/: check.py  check_policy.py  convert_policy.py  plot_actions.py  reformat_policy.py
trifinger_rl_example/: dataset_policy.py  diffusion_example.py  example.py  reformat_policy.py
trifinger_rl_example/policies/: lift_2024_01_23.pt  trifinger.pt
trifinger_rl_example/policies/checkpoints/lift/: last_trifinger_ep_10000_rew_5969.0767.pt  last_trifinger_ep_1000_rew_990.20435.pt  last_trifinger_ep_10200_rew_5939.809.pt  last_trifinger_ep_10400_rew_5725.8125.pt  last_trifinger_ep_10600_rew_5887.276.pt  last_trifinger_ep_10800_rew_6020.567.pt  last_trifinger_ep_11000_rew_5895.713.pt  last_trifinger_ep_11200_rew_6006.758.pt  last_trifinger_ep_11400_rew_5939.117.pt  last_trifinger_ep_11600_rew_5854.2876.pt  last_trifinger_ep_11800_rew_5819.73.pt  last_trifinger_ep_12000_rew_5833.8193.pt  last_trifinger_ep_1200_rew_1465.0195.pt  last_trifinger_ep_12200_rew_5927.6216.pt  last_trifinger_ep_12400_rew_5925.695.pt  last_trifinger_ep_12600_rew_5882.764.pt  last_trifinger_ep_12800_rew_5858.4253.pt  last_trifinger_ep_13000_rew_5839.3936.pt  last_trifinger_ep_1400_rew_1729.9453.pt  last_trifinger_ep_1600_rew_2292.0376.pt  last_trifinger_ep_1800_rew_2978.4028.pt  last_trifinger_ep_2000_rew_4014.4968.pt  last_trifinger_ep_2200_rew_4753.268.pt  last_trifinger_ep_2400_rew_5036.7534.pt  last_trifinger_ep_5600_rew_5727.34.pt  (+39 more)
trifinger_rl_example/policies/diffusion_first_try/: lift_diffusion_stats.npy
(+29 files in other folders)
