[metadata]
name = trifinger_rl_example
version = attr: trifinger_rl_example.__version__
description = Example package for submitting a reinforcement learning policy to the TriFinger cluster
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause


[options]
packages = find:
install_requires =
    numpy
    gym
    torch
    #trifinger_rl_datasets @ git+https://github.com/anyirui/trifinger_rl_datasets.git@master
    trifinger_tactile_learning @ git+ssh://git@gitlab.is.tue.mpg.de/autonomous-learning/trifinger_tactile_learning.git@iandrussow/dev
[options.package_data]
trifinger_rl_example.policies = *.pt
