[metadata]
name = trifinger_rl_example
version = attr: trifinger_rl_example.__version__
description = Example package for submitting a reinforcement learning policy to the TriFinger cluster
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause


[options]
packages = find:
install_requires =
    numpy
    gym
    torch
    #trifinger_rl_datasets @ git+https://github.com/rr-learning/trifinger_rl_datasets.git#egg=trifinger_rl_datasets
    #trifinger_tactile_learning @ git+ssh://gitlab.is.tue.mpg.de/autonomous-learning/trifinger_tactile_learning.git@iandrussow/dev#egg=trifinger_tactile_learning

    
[options.package_data]
trifinger_rl_example.policies = *.pt
